<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/torrentName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="Torrent Name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ProgressBar
            android:id="@+id/torrentProgress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:max="100"
            android:progress="0" />

        <ImageView
            android:id="@+id/playPause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

    <TextView
        android:id="@+id/torrentSizeEta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/torrentSizeEtaLabel" />

    <TextView
        android:id="@+id/torrentUpDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/torrentUpDownLabel" />
    
    <TextView
        android:id="@+id/torrentQueue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/torrentQueueLabel" />

</LinearLayout>
